# rust_rdev_ipc

./: .gitignore  Cargo.toml
bongo_cat/: Cargo.toml
bongo_cat/src/: main.rs  protocol.rs  rdev_proc.rs  server_proc.rs
