[package]
name = "bongo_cat"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = { workspace = true }
once_cell = { workspace = true }
log = { workspace = true }
ipc-channel = { workspace = true }
rdev = { workspace = true }
serde_json = { workspace = true }
parking_lot = { workspace = true }